--- a/ToDo.html
+++ b/ToDo.html
@@ -7,19 +7,13 @@ body {
   margin: 0;
   min-width: 250px;
 }
-
-/* Include the padding and border in an element's total width and height */
 * {
   box-sizing: border-box;
 }
-
-/* Remove margins and padding from the list */
 ul {
   margin: 0;
   padding: 0;
 }
-
-/* Style the list items */
 ul li {
   cursor: pointer;
   position: relative;
@@ -29,31 +23,23 @@ ul li {
   font-size: 18px;
   transition: 0.2s;
   
-  /* make the list items unselectable */
+  
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
-
-/* Set all odd list items to a different color (zebra-stripes) */
 ul li:nth-child(odd) {
   background: #f9f9f9;
 }
-
-/* Darker background-color on hover */
 ul li:hover {
   background: #ddd;
 }
-
-/* When clicked on, add a background color and strike out text */
 ul li.checked {
   background: #888;
   color: #fff;
   text-decoration: line-through;
 }
-
-/* Add a "checked" mark when clicked on */
 ul li.checked::before {
   content: '';
   position: absolute;
@@ -66,36 +52,27 @@ ul li.checked::before {
   height: 15px;
   width: 7px;
 }
-
-/* Style the close button */
 .close {
   position: absolute;
   right: 0;
   top: 0;
   padding: 12px 16px 12px 16px;
 }
-
 .close:hover {
   background-color:gold;
   color: white;
 }
-
-/* Style the header */
 .header {
   background-color:cornflowerblue;
   padding: 30px 40px;
   color: white;
   text-align: center;
 }
-
-/* Clear floats after the header */
 .header:after {
   content: "";
   display: table;
   clear: both;
 }
-
-/* Style the input */
 input {
   margin: 0;
   border: none;
@@ -105,8 +82,6 @@ input {
   float: left;
   font-size: 16px;
 }
-
-/* Style the "Add" button */
 .addBtn {
   padding: 10px;
   width: 25%;
@@ -119,7 +94,6 @@ input {
   transition: 0.3s;
   border-radius: 0;
 }
-
 .addBtn:hover {
   background-color: #bbb;
 }
@@ -142,20 +116,14 @@ input {
   <li>Watch TV</li>
 </ul>
 
-
-
-
-
 <div class="header">
-    <img src="desktop/img/sakura.gif">
-    <ul>
-        <li><a href="file:///Users/tsetsenmaralzolbayar/magaSite.html">HOME</a></li>
-        <li><a href="file:///Users/tsetsenmaralzolbayar/theThingsICanDo.html">THE THINGS I CAN DO</a></li>
-        <li><a href="file:///Users/tsetsenmaralzolbayar/ToDo.html">TO DO LIST</a></li>
-    </ul>
+  <img src="desktop/img/food.gif">
+<h1>My Website</h1>
+
+<a href="file:///Users/tsetsenmaralzolbayar/magaSite.html">HOME</a>
+<a href="file:///Users/tsetsenmaralzolbayar/theThingsICanDo.html">Awesome things I can do</a>
+<a href="file:///Users/tsetsenmaralzolbayar/ToDo.html">TO DO LIST</a>
 </div>
-
-
 
 
 <script>
