--- a/theThingsICanDo.html
+++ b/theThingsICanDo.html
@@ -6,14 +6,16 @@
 <link rel="stylesheet" href="magaSite.css">
 </head>
 <body>
+
 	<div class="header">
-        <img src="desktop/img/sakura.gif">
-        <ul>
-            <li><a href="file:///Users/tsetsenmaralzolbayar/magaSite.html">HOME</a></li>
-			<li><a href="file:///Users/tsetsenmaralzolbayar/theThingsICanDo.html">THE THINGS I CAN DO</a></li>
-			<li><a href="file:///Users/tsetsenmaralzolbayar/ToDo.html">TO DO LIST</a></li>
-        </ul>
-    </div>
+        <img src="desktop/img/food.gif">
+      
+	<ul>
+      <li><a href="file:///Users/tsetsenmaralzolbayar/magaSite.html">HOME</a></li>
+      <li><a href="file:///Users/tsetsenmaralzolbayar/theThingsICanDo.html">Awesome things I can do</a></li>
+      <li><a href="file:///Users/tsetsenmaralzolbayar/ToDo.html">TO DO LIST</a></li>
+    </ul>
+</div>
 
 <div class="container">
 <div id="display">00:00:00</div>
@@ -108,19 +110,19 @@
 	<div class="mySlides fade">
 	  <div class="numbertext">1 / 3</div>
 	  <img src="Desktop/img/redBeautyFirst.jpg" style="width:100%">
-	  <div class="text">Caption Text</div>
+	  
 	</div>
 	
 	<div class="mySlides fade">
 	  <div class="numbertext">2 / 3</div>
 	  <img src="Desktop/img/redBeautySecond.jpg" style="width:100%">
-	  <div class="text">Caption Two</div>
+
 	</div>
 	
 	<div class="mySlides fade">
 	  <div class="numbertext">3 / 3</div>
 	  <img src="Desktop/img/redBeautyThird.jpg" style="width:100%">
-	  <div class="text">Caption Three</div>
+	  
 	</div>
 	
 	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -134,10 +136,6 @@
 	  <span class="dot" onclick="currentSlide(2)"></span> 
 	  <span class="dot" onclick="currentSlide(3)"></span> 
 	</div>
-
-
-
-
 
 <script src = "magaSite.js"></script>
 </body>
